--- a/assets/package.json
+++ b/assets/package.json
@@ -10,14 +10,17 @@
     "phoenix_html": "file:../deps/phoenix_html"
   },
   "devDependencies": {
-    "eslint": "^5.6.1",
+    "autoprefixer": "^9.1.5",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.3",
     "babel-preset-env": "^1.6.1",
     "copy-webpack-plugin": "^4.5.0",
     "css-loader": "^0.28.10",
+    "eslint": "^5.6.1",
     "mini-css-extract-plugin": "^0.4.0",
     "optimize-css-assets-webpack-plugin": "^4.0.0",
+    "postcss-loader": "^3.0.0",
+    "tailwindcss": "^0.6.6",
     "uglifyjs-webpack-plugin": "^1.2.4",
     "webpack": "4.4.0",
     "webpack-cli": "^2.0.10"
