--- a/assets/package.json
+++ b/assets/package.json
@@ -15,11 +15,14 @@
     "babel-loader": "^7.1.3",
     "babel-preset-env": "^1.6.1",
     "copy-webpack-plugin": "^4.5.0",
-    "css-loader": "^0.28.10",
+    "css-loader": "^1.0.0",
     "eslint": "^5.6.1",
     "mini-css-extract-plugin": "^0.4.0",
     "optimize-css-assets-webpack-plugin": "^4.0.0",
+    "postcss-import": "^12.0.0",
     "postcss-loader": "^3.0.0",
+    "precss": "^3.1.2",
+    "style-loader": "^0.23.0",
     "tailwindcss": "^0.6.6",
     "uglifyjs-webpack-plugin": "^1.2.4",
     "webpack": "4.4.0",
