--- a/assets/package.json
+++ b/assets/package.json
@@ -17,6 +17,7 @@
     "copy-webpack-plugin": "^4.5.0",
     "css-loader": "^1.0.0",
     "eslint": "^5.6.1",
+    "file-loader": "^2.0.0",
     "mini-css-extract-plugin": "^0.4.0",
     "optimize-css-assets-webpack-plugin": "^4.0.0",
     "postcss-import": "^12.0.0",
