update elixir dependencies

--- a/elixir_buildpack.config
+++ b/elixir_buildpack.config
@@ -1,8 +1,8 @@
 # Erlang version
-erlang_version=21.1
+erlang_version=21.2.4
 
 # Elixir version
-elixir_version=1.7.3
+elixir_version=1.8.0-otp-21
 
 # Always rebuild from scratch on every deploy?
 always_rebuild=false
