--- a/assets/package.json
+++ b/assets/package.json
@@ -10,23 +10,23 @@
     "phoenix_html": "file:../deps/phoenix_html"
   },
   "devDependencies": {
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.3.1",
     "autoprefixer": "^9.1.5",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.3",
-    "babel-preset-env": "^1.6.1",
+    "babel-loader": "^8.0.5",
     "copy-webpack-plugin": "^4.5.0",
-    "css-loader": "^1.0.0",
+    "css-loader": "^2.1.0",
     "eslint": "^5.6.1",
-    "file-loader": "^2.0.0",
-    "mini-css-extract-plugin": "^0.4.0",
-    "optimize-css-assets-webpack-plugin": "^4.0.0",
+    "file-loader": "^3.0.0",
+    "mini-css-extract-plugin": "^0.5.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.0",
     "postcss-import": "^12.0.0",
     "postcss-loader": "^3.0.0",
-    "precss": "^3.1.2",
+    "precss": "^4.0.0",
     "style-loader": "^0.23.0",
-    "tailwindcss": "^0.6.6",
-    "uglifyjs-webpack-plugin": "^1.2.4",
-    "webpack": "4.4.0",
-    "webpack-cli": "^2.0.10"
+    "tailwindcss": "^0.7.4",
+    "uglifyjs-webpack-plugin": "^2.1.0",
+    "webpack": "^4.4.0",
+    "webpack-cli": "^3.2.0"
   }
 }
