--- a/elixir_buildpack.config
+++ b/elixir_buildpack.config
@@ -2,7 +2,7 @@
 erlang_version=21.2.4
 
 # Elixir version
-elixir_version=1.8.0-otp-21
+elixir_version=1.8.0
 
 # Always rebuild from scratch on every deploy?
 always_rebuild=false
