--- a/assets/package.json
+++ b/assets/package.json
@@ -16,7 +16,12 @@
     "babel-loader": "^8.0.5",
     "copy-webpack-plugin": "^4.5.0",
     "css-loader": "^2.1.0",
-    "eslint": "^5.6.1",
+    "eslint": ">=5.0.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": ">=2.13.0",
+    "eslint-plugin-node": ">=7.0.0",
+    "eslint-plugin-promise": ">=4.0.0",
+    "eslint-plugin-standard": ">=4.0.0",
     "file-loader": "^3.0.0",
     "mini-css-extract-plugin": "^0.5.0",
     "optimize-css-assets-webpack-plugin": "^5.0.0",
