--- a/elixir_buildpack.config
+++ b/elixir_buildpack.config
@@ -1,8 +1,8 @@
 # Erlang version
-erlang_version=21.1.4
+erlang_version=21.3.1
 
 # Elixir version
-elixir_version=1.8.0
+elixir_version=1.8.1-otp-21
 
 # Always rebuild from scratch on every deploy?
 always_rebuild=false
