--- a/priv/blog_posts.toml
+++ b/priv/blog_posts.toml
@@ -21,7 +21,7 @@ intro = """
 image = "/images/gimli_glider.jpeg"
 file_name = "/blog/we-should-have-caught-it.md"
 
-[[blog_post]]
+[[unpublished_blog_post]]
 title = """
         Famous incidents reading list
         """
