--- a/elixir_buildpack.config
+++ b/elixir_buildpack.config
@@ -1,8 +1,11 @@
 # Erlang version
-erlang_version=21.3.7
+erlang_version=22.1.7
 
 # Elixir version
-elixir_version=1.8.2
+elixir_version=1.9.4
 
 # Always rebuild from scratch on every deploy?
 always_rebuild=false
+
+# Create a release using `mix release`? (requires Elixir 1.9)
+release=true
