--- a/phoenix_static_buildpack.config
+++ b/phoenix_static_buildpack.config
@@ -2,10 +2,13 @@
 clean_cache=false
 
 # We can change the filename for the compile script with this option
-compile="compile.sh"
+# compile="compile.sh"
 
 # We can set the version of Node to use for the app here
-node_version=10.15.0
+node_version=12.13.0
+
+# We can set the version of Yarn to use for the app here
+yarn_version=1.19.1 
 
 # We can set the path to phoenix app. E.g. apps/phoenix_app when in umbrella.
 phoenix_relative_path=.
