--- a/phoenix_static_buildpack.config
+++ b/phoenix_static_buildpack.config
@@ -2,7 +2,7 @@
 clean_cache=true
 
 # We can change the filename for the compile script with this option
-# compile="compile.sh"
+compile="compile.sh"
 
 # We can set the version of Node to use for the app here
 node_version=12.13.0
