let gigalixir handle releases

--- a/elixir_buildpack.config
+++ b/elixir_buildpack.config
@@ -8,4 +8,4 @@ elixir_version=1.9.4
 always_rebuild=false
 
 # Create a release using `mix release`? (requires Elixir 1.9)
-release=true
+# release=true
