--- a/assets/package.json
+++ b/assets/package.json
@@ -2,36 +2,35 @@
   "repository": {},
   "license": "MIT",
   "scripts": {
-    "deploy": "webpack --mode production --output-pathinfo true",
+    "deploy": "NODE_ENV=production webpack --mode production --output-pathinfo true",
     "watch": "webpack --mode development --watch"
   },
   "dependencies": {
     "phoenix": "file:../deps/phoenix",
-    "phoenix_html": "file:../deps/phoenix_html"
+    "phoenix_html": "file:../deps/phoenix_html",
+    "postcss": "^8.2.6"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.3.1",
-    "autoprefixer": "^9.1.5",
+    "autoprefixer": "^10.2.4",
     "babel-loader": "^8.0.5",
-    "copy-webpack-plugin": "^5.0.0",
-    "css-loader": "^3.2",
+    "copy-webpack-plugin": "^7.0.0",
+    "css-loader": "^5.1.0",
+    "css-minimizer-webpack-plugin": "^1.2.0",
     "eslint": ">=5.0.0",
-    "eslint-config-standard": "^14.1",
+    "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": ">=2.13.0",
     "eslint-plugin-node": ">=7.0.0",
     "eslint-plugin-promise": ">=4.0.0",
-    "eslint-plugin-standard": ">=4.0.0",
     "file-loader": "^6.0.0",
-    "mini-css-extract-plugin": "^0.9.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.0",
-    "postcss-import": "^12.0.0",
-    "postcss-loader": "^3.0.0",
+    "mini-css-extract-plugin": "^1.3.9",
+    "postcss-import": "^14.0.0",
+    "postcss-loader": "^5.0.0",
     "precss": "^4.0.0",
-    "style-loader": "^1.0",
-    "tailwindcss": "^1.0",
-    "uglifyjs-webpack-plugin": "^2.1.0",
-    "webpack": "^4.4.0",
-    "webpack-cli": "^3.2.0"
+    "style-loader": "^2.0.0",
+    "tailwindcss": "^2.0.3",
+    "webpack": "^5.24.2",
+    "webpack-cli": "^4.5.0"
   }
 }
